change env parameters

--- a/.env_default
+++ b/.env_default
@@ -1,7 +1,7 @@
 	initial_url=''
 	html_folder='html_pages/'
-	Username= 
-	Password= 
+	AParoquiaUsername= 
+	AParoquiaPassword= 
 	authorization=
 	par_par_token=
 	NODE_ENV=debug
